chore: add rust-analyzer vscode ext

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -34,6 +34,7 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
+				"rust-lang.rust-analyzer",
 				// "Gruntfuggly.todo-tree",
 				"maattdd.gitless"
 			],
